--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "stark",
   "version": "0.1.0",
+  "homepage": "https://man-exists.github.io/stark/",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
@@ -17,8 +18,10 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "BROWSER=google-chrome-stable react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
